--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,5 @@
 {
   "name": "Your App Name",
   "short_name": "App Name",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000"
+  "display": "fullscreen",
 }
